fixing image overflow index

--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -165,6 +165,7 @@ nav ul li a.ativo {
     box-shadow: 0 4px 6px rgba(0,0,0,0.2);
     display: block;
     margin: 0 auto;
+    object-fit: contain;
 }
 
 /*
